# agent-reminiscence

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  GITHUB_PUBLISHED.md  LICENSE  MANIFEST.in  PRODUCTION_READY.md  README.md  SECURITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml  pytest.ini  requirements-test.txt  run_ui.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/chatmodes/: po.chatmode.md
.streamlit/: config.toml
agent_mem/: __init__.py  core.py
agent_mem/agents/: __init__.py  er_extractor.py  memorizer.py  memory_retriever.py  memory_updater.py
agent_mem/config/: __init__.py  constants.py  settings.py
agent_mem/database/: __init__.py  init_databases.py  models.py  neo4j_manager.py  postgres_manager.py
agent_mem_mcp/: README.md  __init__.py  __main__.py  run.py  schemas.py  server.py  test_server.py
agent_reminiscence/: __init__.py  core.py
agent_reminiscence_mcp/: README.md  __init__.py  __main__.py  run.py  schemas.py  server.py  test_server.py
docs/: API.md  ARCHITECTURE.md  BMAD_MEMORY_TEMPLATES_PLAN.md  BUG_FIXES.md  DEVELOPMENT.md  GETTING_STARTED.md  GETTING_STARTED_MCP.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_STATUS.md  INDEX.md  MCP_IMPLEMENTATION_COMPLETE.md  MCP_SERVER_CHECKLIST.md  MCP_SERVER_FIXES.md  MCP_SERVER_IMPLEMENTATION_PLAN.md  MCP_SERVER_STATUS.md  MCP_TOOLS.md  PHASE1_SUMMARY.md  QUICKSTART.md  STREAMLIT_UI_PLAN.md  STREAMLIT_UI_USER_GUIDE.md  STRUCTURE.md  pydantic-ai-guide.md  python_mcp_server_guide.md
examples/: README.md  basic_usage.py  batch_update_example.py  database_test.py  search_vs_deep_search.py  simple_test.py  token_usage_tracking.py
scripts/: check_neo4j_entities.py  test_agents_real.py  test_memory_manager_mocked.py  test_memory_manager_real.py  test_retriever_agent.py
streamlit_app/: README.md  app.py  config.py  requirements.txt  run_ui.py
tests/: README.md  __init__.py  conftest.py  test_active_memory_repository.py  test_agent_triplet_support.py  test_batch_update_features.py  test_config.py  test_core.py  test_core_phase5.py  test_embedding_service.py  test_er_extractor.py  test_integration.py  test_longterm_entity_search.py  test_longterm_memory_repository.py  test_mcp_batch_update.py  test_mcp_phase6.py  test_memorizer_agent.py  test_memory_manager.py  test_models.py  test_neo4j_manager.py  test_postgres_manager.py  test_shortterm_entity_search.py  test_shortterm_memory_repository.py  test_streamlit_integration.py  test_triplet_conversion.py
(+226 files in other folders)
